Closed
Bug 799477
Opened 13 years ago
Closed 13 years ago
compilation error in PeerConnectionImpl.cpp: CSFLog.h:68: ‘va_list’ has not been declared
Categories
(Core :: WebRTC: Signaling, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: froydnj, Assigned: jesup)
References
Details
(Whiteboard: [qa-])
Attachments
(1 file)
914 bytes,
patch
|
ehugg
:
review+
akeybl
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Seen this morning when compiling debug or opt x86-64 Linux build:
In file included from /home/froydnj/src/mozilla-central-official/media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.cpp:10:
/home/froydnj/src/mozilla-central-official/media/webrtc/signaling//./src/common/browser_logging/CSFLog.h:68: error: ‘va_list’ has not been declared
Assignee | ||
Comment 1•13 years ago
|
||
CSFLog.h should include varargs (though it's odd something else hasn't included it before it got there, since every other system seems to have - what OS/Compiler/compiler-revision?)
![]() |
Reporter | |
Comment 2•13 years ago
|
||
OS is Debian stable.
Compiler is GCC 4.4.5 (Debian 4.4.5-8).
Comment 3•13 years ago
|
||
Got the same error.
OS : ubuntu 10.10
Compiler: gcc version 4.4.5 (Ubuntu/Linaro 4.4.4-14ubuntu5.1)
Assignee | ||
Comment 4•13 years ago
|
||
Assignee | ||
Comment 5•13 years ago
|
||
Comment on attachment 669615 [details] [diff] [review]
missing stdarg.h in CSFLog.h (typically gcc 4.4.x)
If any of the reporters care to try this patch, that would be useful
Attachment #669615 -
Flags: review?(ethanhugg)
Assignee | ||
Comment 6•13 years ago
|
||
Not that I expect problems... :-)
Updated•13 years ago
|
Attachment #669615 -
Flags: review?(ethanhugg) → review+
Assignee | ||
Comment 7•13 years ago
|
||
Comment 9•13 years ago
|
||
Assignee: nobody → rjesup
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Updated•13 years ago
|
status-firefox18:
--- → affected
Updated•13 years ago
|
Whiteboard: [qa-]
Comment 10•13 years ago
|
||
Comment on attachment 669615 [details] [diff] [review]
missing stdarg.h in CSFLog.h (typically gcc 4.4.x)
[Approval Request Comment]
Bug caused by (feature/regressing bug #): regression from bug 792188
User impact if declined: Can't build with gcc 4.4
Testing completed (on m-c, etc.): Landed on m-c
Risk to taking this patch (and alternatives if risky): Trivial one-line patch adding an standard header include. No risk.
String or UUID changes made by this patch: None
Attachment #669615 -
Flags: approval-mozilla-aurora?
Updated•13 years ago
|
Attachment #669615 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 11•13 years ago
|
||
status-firefox19:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•