Bug 799477: missing stdarg.h in CSFLog.h (typically gcc 4.4.x) r=ehugg